Regression: Crash when creating compositor node group #112014

Closed
opened 2023-09-06 11:05:10 +02:00 by Pratik Borhade · 3 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03

Blender Version
Broken: 4.0 b1526dd2c6a58bccc5a1fb60403851cdba8edfaf
Worked: 4.0, 8a735d0aa4c7

Short description of error
Crash seems to happen when creating group if nodes are connected with render layer node

Exact steps for others to reproduce the error

  • Open attached file
  • Ctrl + G to create the group
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03 **Blender Version** Broken: 4.0 `b1526dd2c6a58bccc5a1fb60403851cdba8edfaf` Worked: 4.0, `8a735d0aa4c7` **Short description of error** Crash seems to happen when creating group if nodes are connected with `render layer` node **Exact steps for others to reproduce the error** - Open attached file - `Ctrl + G` to create the group
Pratik Borhade added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-06 11:05:11 +02:00
Author
Member

I suspect e071288ab2 introduced the crash.

I suspect e071288ab2901f43a5cde82a49c02101cd579aad introduced the crash.
Pratik Borhade self-assigned this 2023-09-06 11:22:47 +02:00
Pratik Borhade removed their assignment 2023-09-06 11:23:53 +02:00
Author
Member

This is not limited to compositor nodes. GN and Material node groups also triggered the crash.
I'll bisect.

This is not limited to compositor nodes. GN and Material node groups also triggered the crash. I'll bisect.
Author
Member

Yes, caused by e071288ab2
@LukasTonne ^

Yes, caused by e071288ab2901f43a5cde82a49c02101cd579aad @LukasTonne ^
Lukas Tönne self-assigned this 2023-09-06 12:58:54 +02:00
Lukas Tönne added this to the Nodes & Physics project 2023-09-06 12:58:59 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 18:02:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112014
No description provided.